syntax = "proto3";

package auth;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/duc-cnzj/mars-client/v4/auth;auth";

message LoginRequest {
  string username = 1 [(validate.rules).string.min_bytes = 1];
  string password = 2 [(validate.rules).string.min_bytes = 1];
}

message LoginResponse {
  string token = 1;
  int64 expires_in = 2;
}

message ExchangeRequest {
  string code = 1 [(validate.rules).string.min_bytes = 1];
}

message ExchangeResponse {
  string token = 1;
  int64 expires_in = 2;
}

message InfoRequest {}

message InfoResponse {
  string id = 1;
  string avatar = 2;
  string name = 3;
  string email = 4;
  string logout_url = 5;
  repeated string roles = 6;
}

message SettingsRequest {}

message SettingsResponse {
  message OidcSetting {
    bool enabled = 1;
    string name = 2;
    string url = 3;
    string end_session_endpoint = 4;
    string state = 5;
  }

  repeated OidcSetting items = 1;
}

service Auth {
  //  Login 登录接口
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/auth/login",
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {} // Disable security key
    };
  }

  //  Info 获取当前登录的用户信息
  rpc Info(InfoRequest) returns (InfoResponse) {
    option (google.api.http) = {
      get: "/api/auth/info"
    };
  }

  //  Settings 获取 sso 配置以及跳转 url
  rpc Settings(SettingsRequest) returns (SettingsResponse) {
    option (google.api.http) = {
      get: "/api/auth/settings"
    };
  }

  // Exchange sso code 换取 token
  rpc Exchange(ExchangeRequest) returns (ExchangeResponse) {
    option (google.api.http) = {
      post: "/api/auth/exchange",
      body: "*"
    };
  }
}
